force-app/main/default/objects/VGE_PL_Iteration__c/VGE_PL_Iteration__c.object-meta.xml
<CustomObject>
    <label>VGE PL Iteration</label>
    <nameField>
        <displayFormat>VGEPLIT-{00000000}</displayFormat>
        <label>VGE PL Iteration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VGE PL Iteration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>