force-app/main/default/objects/VGE_PL_Iteration__c/fields/Current_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_End_Date__c</fullName>
    <label>Current Contract End Date</label>
    <type>Date</type>
</CustomField>