force-app/main/default/objects/VGE_PL_Iteration__c/fields/Current_Contract_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Payment_Terms__c</fullName>
    <label>Current Contract Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>